package edu.fiuba.algo3.modelo.Mapa.PaqueteRecursos;

import edu.fiuba.algo3.modelo.Construccion.Construccion;

public interface Recurso {

    boolean esPosibleConstruir(Construccion unaConstruccion);
}
