@startuml
'https://plantuml.com/class-diagram

class Casilla {
    - terreno

    + agregarUnidad()
    + agregarConstruccion()
    + setTerrreno()
    + setRecurso()
}

interface Construible {
    +asignarConstruccion(construccion)
}

class HayConstruccion {
    +asignarConstruccion(construccion)
}

class NoHayConstruccion {
    +asignarConstruccion()
}

interface Terreno {
    +asignarConstruccion()
}

class ConMoho {
    -recurso
    +asignarConstruccion(construccionZerg)
}

class ConEnergia {
    -recurso
    +asignarConstruccion(construccionProtoss)
}

class Vacio {
    -recurso
    +asignarConstruccion()
}

interface Recurso {
    +asignarConstruccion()
}

class Volcan {
    -construible
    +asignarConstruccion(refineria : DeGas)
}

class NodoMineral {
    -construible
    +asignarConstruccion(refineria : DeMineral)
}

class SinRecurso {
    -construible
    +asignarConstruccion(unaConstruccion)
}

Casilla -> Terreno
Construible <|.. HayConstruccion
Construible <|.. NoHayConstruccion

Terreno -> Recurso
Terreno <|.. ConEnergia
Terreno <|.. ConMoho
Terreno <|.. Vacio

Recurso -> Construible
Recurso <|.. Volcan
Recurso <|.. NodoMineral
Recurso <|.. SinRecurso

@enduml